chore: nacos build compatible 3.x